# sling-whiteboard

./: .asf.yaml  .gitignore  .gitmodules  .sling-module.json  .sling-module.xml  Jenkinsfile  README.md  bnd.bnd  jbang-catalog.json  pom.xml  start.java
SlingJCRPersist/: pom.xml
SlingModelPersist/: README.md  pom.xml
aries-jax-rs-whiteboard/: README.md  bnd.bnd  pom.xml
asciidoctor-diagrams/: README.md  pom.xml
atomosfeaturelauncher/: .gitignore  Dockerfile  build.sh  build_nodocker.sh  launch.sh  pom.xml
atomosfeaturelauncherconfig/: pom.xml
atomosfeaturelauncherweaver/: pom.xml
capabilities/: README.md  README.txt  pom.xml
capabilities-oak/: pom.xml
chunked-distribution/: README.md  pom.xml
cli/: Dockerfile  README.md  docker-env.sample  pom.xml
codesign/: pom.xml
connectfeaturelauncher/: README.md  pom.xml
content-package-2-feature-model/: README.md  pom.xml
contentparser/: pom.xml
distribution-service/: README.md
dokapi/: README.md  bnd.bnd  pom.xml
encrypt/: .gitignore  README.md  pom.xml
fake-content-generator/: README.md  index.js  package-lock.json  package.json
feature-analyser-extension/: README.md  pom.xml
feature-api-regions/: README.md  pom.xml
feature-diff/: README.md  pom.xml
file-optim/: NOTICE  (+2 more)
skill-evals/: .gitignore  AGENTS.md  README.md  pyproject.toml
skill-evals/src/skill_evals/: __init__.py  _registry.py  compare_eval_render.py  compare_eval_report.py  compare_eval_runs.py
skill-evals/src/skill_evals/jcr_js_nodetypes/: Dockerfile  __init__.py  compose.yaml  dataset.jsonl  scorer.py  setup.sh  task.py
(+5359 files in other folders)
